# StudentManagement-Project

./: CMakeLists.txt
include/: club.h  person.h  personManager.h  student.h  subject.h  teacher.h
src/: club.cpp  main.cpp  person.cpp  personManager.cpp  student.cpp  subject.cpp  teacher.cpp
